force-app/main/default/objects/Purchase__c/Purchase__c.object-meta.xml
<CustomObject>
    <label>Purchase</label>
    <nameField>
        <displayFormat>P-{000}</displayFormat>
        <label>Purchase Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>