force-app/main/default/objects/Purchase__c/fields/Discount_in_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Discount_in_Percentage__c</fullName>
    <label>Discount in Percentage</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>