force-app/main/default/objects/Purchase__c/fields/Original_price__c.field-meta.xml
<CustomField>
    <fullName>Original_price__c</fullName>
    <formula>Course__r.Fees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>